docs/upbound-provider-gcp/0.36/dataproc/v1beta1/autoscalingPolicy.md
---
permalink: /upbound-provider-gcp/0.36/dataproc/v1beta1/autoscalingPolicy/
---

# dataproc.v1beta1.autoscalingPolicy

"AutoscalingPolicy is the Schema for the AutoscalingPolicys API. Describes an autoscaling policy for Dataproc cluster autoscaler."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withBasicAlgorithm(basicAlgorithm)`](#fn-specforproviderwithbasicalgorithm)
    * [`fn withBasicAlgorithmMixin(basicAlgorithm)`](#fn-specforproviderwithbasicalgorithmmixin)
    * [`fn withLocation(location)`](#fn-specforproviderwithlocation)
    * [`fn withProject(project)`](#fn-specforproviderwithproject)
    * [`fn withSecondaryWorkerConfig(secondaryWorkerConfig)`](#fn-specforproviderwithsecondaryworkerconfig)
    * [`fn withSecondaryWorkerConfigMixin(secondaryWorkerConfig)`](#fn-specforproviderwithsecondaryworkerconfigmixin)
    * [`fn withWorkerConfig(workerConfig)`](#fn-specforproviderwithworkerconfig)
    * [`fn withWorkerConfigMixin(workerConfig)`](#fn-specforproviderwithworkerconfigmixin)
    * [`obj spec.forProvider.basicAlgorithm`](#obj-specforproviderbasicalgorithm)
      * [`fn withCooldownPeriod(cooldownPeriod)`](#fn-specforproviderbasicalgorithmwithcooldownperiod)
      * [`fn withYarnConfig(yarnConfig)`](#fn-specforproviderbasicalgorithmwithyarnconfig)
      * [`fn withYarnConfigMixin(yarnConfig)`](#fn-specforproviderbasicalgorithmwithyarnconfigmixin)
      * [`obj spec.forProvider.basicAlgorithm.yarnConfig`](#obj-specforproviderbasicalgorithmyarnconfig)
        * [`fn withGracefulDecommissionTimeout(gracefulDecommissionTimeout)`](#fn-specforproviderbasicalgorithmyarnconfigwithgracefuldecommissiontimeout)
        * [`fn withScaleDownFactor(scaleDownFactor)`](#fn-specforproviderbasicalgorithmyarnconfigwithscaledownfactor)
        * [`fn withScaleDownMinWorkerFraction(scaleDownMinWorkerFraction)`](#fn-specforproviderbasicalgorithmyarnconfigwithscaledownminworkerfraction)
        * [`fn withScaleUpFactor(scaleUpFactor)`](#fn-specforproviderbasicalgorithmyarnconfigwithscaleupfactor)
        * [`fn withScaleUpMinWorkerFraction(scaleUpMinWorkerFraction)`](#fn-specforproviderbasicalgorithmyarnconfigwithscaleupminworkerfraction)
    * [`obj spec.forProvider.secondaryWorkerConfig`](#obj-specforprovidersecondaryworkerconfig)
      * [`fn withMaxInstances(maxInstances)`](#fn-specforprovidersecondaryworkerconfigwithmaxinstances)
      * [`fn withMinInstances(minInstances)`](#fn-specforprovidersecondaryworkerconfigwithmininstances)
      * [`fn withWeight(weight)`](#fn-specforprovidersecondaryworkerconfigwithweight)
    * [`obj spec.forProvider.workerConfig`](#obj-specforproviderworkerconfig)
      * [`fn withMaxInstances(maxInstances)`](#fn-specforproviderworkerconfigwithmaxinstances)
      * [`fn withMinInstances(minInstances)`](#fn-specforproviderworkerconfigwithmininstances)
      * [`fn withWeight(weight)`](#fn-specforproviderworkerconfigwithweight)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withBasicAlgorithm(basicAlgorithm)`](#fn-specinitproviderwithbasicalgorithm)
    * [`fn withBasicAlgorithmMixin(basicAlgorithm)`](#fn-specinitproviderwithbasicalgorithmmixin)
    * [`fn withProject(project)`](#fn-specinitproviderwithproject)
    * [`fn withSecondaryWorkerConfig(secondaryWorkerConfig)`](#fn-specinitproviderwithsecondaryworkerconfig)
    * [`fn withSecondaryWorkerConfigMixin(secondaryWorkerConfig)`](#fn-specinitproviderwithsecondaryworkerconfigmixin)
    * [`fn withWorkerConfig(workerConfig)`](#fn-specinitproviderwithworkerconfig)
    * [`fn withWorkerConfigMixin(workerConfig)`](#fn-specinitproviderwithworkerconfigmixin)
    * [`obj spec.initProvider.basicAlgorithm`](#obj-specinitproviderbasicalgorithm)
      * [`fn withCooldownPeriod(cooldownPeriod)`](#fn-specinitproviderbasicalgorithmwithcooldownperiod)
      * [`fn withYarnConfig(yarnConfig)`](#fn-specinitproviderbasicalgorithmwithyarnconfig)
      * [`fn withYarnConfigMixin(yarnConfig)`](#fn-specinitproviderbasicalgorithmwithyarnconfigmixin)
      * [`obj spec.initProvider.basicAlgorithm.yarnConfig`](#obj-specinitproviderbasicalgorithmyarnconfig)
        * [`fn withGracefulDecommissionTimeout(gracefulDecommissionTimeout)`](#fn-specinitproviderbasicalgorithmyarnconfigwithgracefuldecommissiontimeout)
        * [`fn withScaleDownFactor(scaleDownFactor)`](#fn-specinitproviderbasicalgorithmyarnconfigwithscaledownfactor)
        * [`fn withScaleDownMinWorkerFraction(scaleDownMinWorkerFraction)`](#fn-specinitproviderbasicalgorithmyarnconfigwithscaledownminworkerfraction)
        * [`fn withScaleUpFactor(scaleUpFactor)`](#fn-specinitproviderbasicalgorithmyarnconfigwithscaleupfactor)
        * [`fn withScaleUpMinWorkerFraction(scaleUpMinWorkerFraction)`](#fn-specinitproviderbasicalgorithmyarnconfigwithscaleupminworkerfraction)
    * [`obj spec.initProvider.secondaryWorkerConfig`](#obj-specinitprovidersecondaryworkerconfig)
      * [`fn withMaxInstances(maxInstances)`](#fn-specinitprovidersecondaryworkerconfigwithmaxinstances)
      * [`fn withMinInstances(minInstances)`](#fn-specinitprovidersecondaryworkerconfigwithmininstances)
      * [`fn withWeight(weight)`](#fn-specinitprovidersecondaryworkerconfigwithweight)
    * [`obj spec.initProvider.workerConfig`](#obj-specinitproviderworkerconfig)
      * [`fn withMaxInstances(maxInstances)`](#fn-specinitproviderworkerconfigwithmaxinstances)
      * [`fn withMinInstances(minInstances)`](#fn-specinitproviderworkerconfigwithmininstances)
      * [`fn withWeight(weight)`](#fn-specinitproviderworkerconfigwithweight)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
    * [`obj spec.providerRef.policy`](#obj-specproviderrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of AutoscalingPolicy

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"AutoscalingPolicySpec defines the desired state of AutoscalingPolicy"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource. This field is planned to be deprecated in favor of the ManagementPolicies field in a future release. Currently, both could be set independently and non-default values would be honored if the feature flag is enabled. See the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS AN ALPHA FIELD. Do not use it in production. It is not honored unless the relevant Crossplane feature flag is enabled, and may be changed or removed without notice. ManagementPolicies specify the array of actions Crossplane is allowed to take on the managed and external resources. This field is planned to replace the DeletionPolicy field in a future release. Currently, both could be set independently and non-default values would be honored if the feature flag is enabled. If both are custom, the DeletionPolicy field will be ignored. See the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223 and this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS AN ALPHA FIELD. Do not use it in production. It is not honored unless the relevant Crossplane feature flag is enabled, and may be changed or removed without notice. ManagementPolicies specify the array of actions Crossplane is allowed to take on the managed and external resources. This field is planned to replace the DeletionPolicy field in a future release. Currently, both could be set independently and non-default values would be honored if the feature flag is enabled. If both are custom, the DeletionPolicy field will be ignored. See the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223 and this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withBasicAlgorithm

```ts
withBasicAlgorithm(basicAlgorithm)
```

"Basic algorithm for autoscaling. Structure is documented below."

### fn spec.forProvider.withBasicAlgorithmMixin

```ts
withBasicAlgorithmMixin(basicAlgorithm)
```

"Basic algorithm for autoscaling. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLocation

```ts
withLocation(location)
```

"The  location where the autoscaling policy should reside. The default value is global."

### fn spec.forProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs. If it is not provided, the provider project is used."

### fn spec.forProvider.withSecondaryWorkerConfig

```ts
withSecondaryWorkerConfig(secondaryWorkerConfig)
```

"Describes how the autoscaler will operate for secondary workers. Structure is documented below."

### fn spec.forProvider.withSecondaryWorkerConfigMixin

```ts
withSecondaryWorkerConfigMixin(secondaryWorkerConfig)
```

"Describes how the autoscaler will operate for secondary workers. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withWorkerConfig

```ts
withWorkerConfig(workerConfig)
```

"Describes how the autoscaler will operate for primary workers. Structure is documented below."

### fn spec.forProvider.withWorkerConfigMixin

```ts
withWorkerConfigMixin(workerConfig)
```

"Describes how the autoscaler will operate for primary workers. Structure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.basicAlgorithm

"Basic algorithm for autoscaling. Structure is documented below."

### fn spec.forProvider.basicAlgorithm.withCooldownPeriod

```ts
withCooldownPeriod(cooldownPeriod)
```

"Duration between scaling events. A scaling period starts after the update operation from the previous event has completed. Bounds: [2m, 1d]. Default: 2m."

### fn spec.forProvider.basicAlgorithm.withYarnConfig

```ts
withYarnConfig(yarnConfig)
```

"YARN autoscaling configuration. Structure is documented below."

### fn spec.forProvider.basicAlgorithm.withYarnConfigMixin

```ts
withYarnConfigMixin(yarnConfig)
```

"YARN autoscaling configuration. Structure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.basicAlgorithm.yarnConfig

"YARN autoscaling configuration. Structure is documented below."

### fn spec.forProvider.basicAlgorithm.yarnConfig.withGracefulDecommissionTimeout

```ts
withGracefulDecommissionTimeout(gracefulDecommissionTimeout)
```

"Timeout for YARN graceful decommissioning of Node Managers. Specifies the duration to wait for jobs to complete before forcefully removing workers (and potentially interrupting jobs). Only applicable to downscaling operations. Bounds: [0s, 1d]."

### fn spec.forProvider.basicAlgorithm.yarnConfig.withScaleDownFactor

```ts
withScaleDownFactor(scaleDownFactor)
```

"Fraction of average pending memory in the last cooldown period for which to remove workers. A scale-down factor of 1 will result in scaling down so that there is no available memory remaining after the update (more aggressive scaling). A scale-down factor of 0 disables removing workers, which can be beneficial for autoscaling a single job. Bounds: [0.0, 1.0]."

### fn spec.forProvider.basicAlgorithm.yarnConfig.withScaleDownMinWorkerFraction

```ts
withScaleDownMinWorkerFraction(scaleDownMinWorkerFraction)
```

"Minimum scale-down threshold as a fraction of total cluster size before scaling occurs. For example, in a 20-worker cluster, a threshold of 0.1 means the autoscaler must recommend at least a 2 worker scale-down for the cluster to scale. A threshold of 0 means the autoscaler will scale down on any recommended change. Bounds: [0.0, 1.0]. Default: 0.0."

### fn spec.forProvider.basicAlgorithm.yarnConfig.withScaleUpFactor

```ts
withScaleUpFactor(scaleUpFactor)
```

"Fraction of average pending memory in the last cooldown period for which to add workers. A scale-up factor of 1.0 will result in scaling up so that there is no pending memory remaining after the update (more aggressive scaling). A scale-up factor closer to 0 will result in a smaller magnitude of scaling up (less aggressive scaling). Bounds: [0.0, 1.0]."

### fn spec.forProvider.basicAlgorithm.yarnConfig.withScaleUpMinWorkerFraction

```ts
withScaleUpMinWorkerFraction(scaleUpMinWorkerFraction)
```

"Minimum scale-up threshold as a fraction of total cluster size before scaling occurs. For example, in a 20-worker cluster, a threshold of 0.1 means the autoscaler must recommend at least a 2-worker scale-up for the cluster to scale. A threshold of 0 means the autoscaler will scale up on any recommended change. Bounds: [0.0, 1.0]. Default: 0.0."

## obj spec.forProvider.secondaryWorkerConfig

"Describes how the autoscaler will operate for secondary workers. Structure is documented below."

### fn spec.forProvider.secondaryWorkerConfig.withMaxInstances

```ts
withMaxInstances(maxInstances)
```

"Maximum number of instances for this group. Note that by default, clusters will not use secondary workers. Required for secondary workers if the minimum secondary instances is set. Bounds: [minInstances, ). Defaults to 0."

### fn spec.forProvider.secondaryWorkerConfig.withMinInstances

```ts
withMinInstances(minInstances)
```

"Minimum number of instances for this group. Bounds: [0, maxInstances]. Defaults to 0."

### fn spec.forProvider.secondaryWorkerConfig.withWeight

```ts
withWeight(weight)
```

"Weight for the instance group, which is used to determine the fraction of total workers in the cluster from this instance group. For example, if primary workers have weight 2, and secondary workers have weight 1, the cluster will have approximately 2 primary workers for each secondary worker. The cluster may not reach the specified balance if constrained by min/max bounds or other autoscaling settings. For example, if maxInstances for secondary workers is 0, then only primary workers will be added. The cluster can also be out of balance when created. If weight is not set on any instance group, the cluster will default to equal weight for all groups: the cluster will attempt to maintain an equal number of workers in each group within the configured size bounds for each group. If weight is set for one group only, the cluster will default to zero weight on the unset group. For example if weight is set only on primary workers, the cluster will use primary workers only and no secondary workers."

## obj spec.forProvider.workerConfig

"Describes how the autoscaler will operate for primary workers. Structure is documented below."

### fn spec.forProvider.workerConfig.withMaxInstances

```ts
withMaxInstances(maxInstances)
```

"Maximum number of instances for this group."

### fn spec.forProvider.workerConfig.withMinInstances

```ts
withMinInstances(minInstances)
```

"Minimum number of instances for this group. Bounds: [2, maxInstances]. Defaults to 2."

### fn spec.forProvider.workerConfig.withWeight

```ts
withWeight(weight)
```

"Weight for the instance group, which is used to determine the fraction of total workers in the cluster from this instance group. For example, if primary workers have weight 2, and secondary workers have weight 1, the cluster will have approximately 2 primary workers for each secondary worker. The cluster may not reach the specified balance if constrained by min/max bounds or other autoscaling settings. For example, if maxInstances for secondary workers is 0, then only primary workers will be added. The cluster can also be out of balance when created. If weight is not set on any instance group, the cluster will default to equal weight for all groups: the cluster will attempt to maintain an equal number of workers in each group within the configured size bounds for each group. If weight is set for one group only, the cluster will default to zero weight on the unset group. For example if weight is set only on primary workers, the cluster will use primary workers only and no secondary workers."

## obj spec.initProvider

"THIS IS AN ALPHA FIELD. Do not use it in production. It is not honored unless the relevant Crossplane feature flag is enabled, and may be changed or removed without notice. InitProvider holds the same fields as ForProvider, with the exception of Identifier and other resource reference fields. The fields that are in InitProvider are merged into ForProvider when the resource is created. The same fields are also added to the terraform ignore_changes hook, to avoid updating them after creation. This is useful for fields that are required on creation, but we do not desire to update them after creation, for example because of an external controller is managing them, like an autoscaler."

### fn spec.initProvider.withBasicAlgorithm

```ts
withBasicAlgorithm(basicAlgorithm)
```

"Basic algorithm for autoscaling. Structure is documented below."

### fn spec.initProvider.withBasicAlgorithmMixin

```ts
withBasicAlgorithmMixin(basicAlgorithm)
```

"Basic algorithm for autoscaling. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs. If it is not provided, the provider project is used."

### fn spec.initProvider.withSecondaryWorkerConfig

```ts
withSecondaryWorkerConfig(secondaryWorkerConfig)
```

"Describes how the autoscaler will operate for secondary workers. Structure is documented below."

### fn spec.initProvider.withSecondaryWorkerConfigMixin

```ts
withSecondaryWorkerConfigMixin(secondaryWorkerConfig)
```

"Describes how the autoscaler will operate for secondary workers. Structure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withWorkerConfig

```ts
withWorkerConfig(workerConfig)
```

"Describes how the autoscaler will operate for primary workers. Structure is documented below."

### fn spec.initProvider.withWorkerConfigMixin

```ts
withWorkerConfigMixin(workerConfig)
```

"Describes how the autoscaler will operate for primary workers. Structure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.basicAlgorithm

"Basic algorithm for autoscaling. Structure is documented below."

### fn spec.initProvider.basicAlgorithm.withCooldownPeriod

```ts
withCooldownPeriod(cooldownPeriod)
```

"Duration between scaling events. A scaling period starts after the update operation from the previous event has completed. Bounds: [2m, 1d]. Default: 2m."

### fn spec.initProvider.basicAlgorithm.withYarnConfig

```ts
withYarnConfig(yarnConfig)
```

"YARN autoscaling configuration. Structure is documented below."

### fn spec.initProvider.basicAlgorithm.withYarnConfigMixin

```ts
withYarnConfigMixin(yarnConfig)
```

"YARN autoscaling configuration. Structure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.basicAlgorithm.yarnConfig

"YARN autoscaling configuration. Structure is documented below."

### fn spec.initProvider.basicAlgorithm.yarnConfig.withGracefulDecommissionTimeout

```ts
withGracefulDecommissionTimeout(gracefulDecommissionTimeout)
```

"Timeout for YARN graceful decommissioning of Node Managers. Specifies the duration to wait for jobs to complete before forcefully removing workers (and potentially interrupting jobs). Only applicable to downscaling operations. Bounds: [0s, 1d]."

### fn spec.initProvider.basicAlgorithm.yarnConfig.withScaleDownFactor

```ts
withScaleDownFactor(scaleDownFactor)
```

"Fraction of average pending memory in the last cooldown period for which to remove workers. A scale-down factor of 1 will result in scaling down so that there is no available memory remaining after the update (more aggressive scaling). A scale-down factor of 0 disables removing workers, which can be beneficial for autoscaling a single job. Bounds: [0.0, 1.0]."

### fn spec.initProvider.basicAlgorithm.yarnConfig.withScaleDownMinWorkerFraction

```ts
withScaleDownMinWorkerFraction(scaleDownMinWorkerFraction)
```

"Minimum scale-down threshold as a fraction of total cluster size before scaling occurs. For example, in a 20-worker cluster, a threshold of 0.1 means the autoscaler must recommend at least a 2 worker scale-down for the cluster to scale. A threshold of 0 means the autoscaler will scale down on any recommended change. Bounds: [0.0, 1.0]. Default: 0.0."

### fn spec.initProvider.basicAlgorithm.yarnConfig.withScaleUpFactor

```ts
withScaleUpFactor(scaleUpFactor)
```

"Fraction of average pending memory in the last cooldown period for which to add workers. A scale-up factor of 1.0 will result in scaling up so that there is no pending memory remaining after the update (more aggressive scaling). A scale-up factor closer to 0 will result in a smaller magnitude of scaling up (less aggressive scaling). Bounds: [0.0, 1.0]."

### fn spec.initProvider.basicAlgorithm.yarnConfig.withScaleUpMinWorkerFraction

```ts
withScaleUpMinWorkerFraction(scaleUpMinWorkerFraction)
```

"Minimum scale-up threshold as a fraction of total cluster size before scaling occurs. For example, in a 20-worker cluster, a threshold of 0.1 means the autoscaler must recommend at least a 2-worker scale-up for the cluster to scale. A threshold of 0 means the autoscaler will scale up on any recommended change. Bounds: [0.0, 1.0]. Default: 0.0."

## obj spec.initProvider.secondaryWorkerConfig

"Describes how the autoscaler will operate for secondary workers. Structure is documented below."

### fn spec.initProvider.secondaryWorkerConfig.withMaxInstances

```ts
withMaxInstances(maxInstances)
```

"Maximum number of instances for this group. Note that by default, clusters will not use secondary workers. Required for secondary workers if the minimum secondary instances is set. Bounds: [minInstances, ). Defaults to 0."

### fn spec.initProvider.secondaryWorkerConfig.withMinInstances

```ts
withMinInstances(minInstances)
```

"Minimum number of instances for this group. Bounds: [0, maxInstances]. Defaults to 0."

### fn spec.initProvider.secondaryWorkerConfig.withWeight

```ts
withWeight(weight)
```

"Weight for the instance group, which is used to determine the fraction of total workers in the cluster from this instance group. For example, if primary workers have weight 2, and secondary workers have weight 1, the cluster will have approximately 2 primary workers for each secondary worker. The cluster may not reach the specified balance if constrained by min/max bounds or other autoscaling settings. For example, if maxInstances for secondary workers is 0, then only primary workers will be added. The cluster can also be out of balance when created. If weight is not set on any instance group, the cluster will default to equal weight for all groups: the cluster will attempt to maintain an equal number of workers in each group within the configured size bounds for each group. If weight is set for one group only, the cluster will default to zero weight on the unset group. For example if weight is set only on primary workers, the cluster will use primary workers only and no secondary workers."

## obj spec.initProvider.workerConfig

"Describes how the autoscaler will operate for primary workers. Structure is documented below."

### fn spec.initProvider.workerConfig.withMaxInstances

```ts
withMaxInstances(maxInstances)
```

"Maximum number of instances for this group."

### fn spec.initProvider.workerConfig.withMinInstances

```ts
withMinInstances(minInstances)
```

"Minimum number of instances for this group. Bounds: [2, maxInstances]. Defaults to 2."

### fn spec.initProvider.workerConfig.withWeight

```ts
withWeight(weight)
```

"Weight for the instance group, which is used to determine the fraction of total workers in the cluster from this instance group. For example, if primary workers have weight 2, and secondary workers have weight 1, the cluster will have approximately 2 primary workers for each secondary worker. The cluster may not reach the specified balance if constrained by min/max bounds or other autoscaling settings. For example, if maxInstances for secondary workers is 0, then only primary workers will be added. The cluster can also be out of balance when created. If weight is not set on any instance group, the cluster will default to equal weight for all groups: the cluster will attempt to maintain an equal number of workers in each group within the configured size bounds for each group. If weight is set for one group only, the cluster will default to zero weight on the unset group. For example if weight is set only on primary workers, the cluster will use primary workers only and no secondary workers."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef.policy

"Policies for referencing."

### fn spec.providerRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which contains a name, metadata and a reference to secret store config to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used for this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret. - Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource. This field is planned to be replaced in a future release in favor of PublishConnectionDetailsTo. Currently, both could be set independently and connection details would be published to both without affecting each other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."